criando styles das telas nationalities, profile, done-recipes, favorite-recipes

--- a/src/Css/FavoriteCards.module.css
+++ b/src/Css/FavoriteCards.module.css
@@ -1,12 +1,18 @@
 .cardImg {
-  width: 25%;
+  border-bottom-left-radius: 8px;
+  border-top-left-radius: 8px;
+  width: 100%;
 }
 
 .favButton {
+  background-color: white;
+  border: none;
   width: 15%;
 }
 
 .shareButton {
+  background-color: white;
+  border: none;
   width: 15%;
 }
 
