--- a/src/Css/DoneRecipes.module.css
+++ b/src/Css/DoneRecipes.module.css
@@ -1,3 +1,64 @@
 .thumb {
   width: 30%;
 }
+
+.body {
+  background-color: #f5f5f6;
+}
+
+.section {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.section button {
+  background-color: white;
+  border: solid 1px #fda509;
+  border-radius: 6px;
+  font-size: 20px;
+  padding: 10px;
+  width: 100px;
+}
+
+.sectionFilter {
+  background-color: white;
+  border: none;
+  border-radius: 8px;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  display: flex;
+  margin-bottom: 12px;
+  margin-left: 10px;
+}
+
+.share {
+  align-items: baseline;
+  background-color: white;
+  display: flex;
+  flex-basis: 50px;
+  height: 30px;
+  justify-content: space-between;
+  padding-left: 5px;
+  width: 220px;
+}
+
+.share h4 {
+  color: #e5e5e5;
+  display: flex;
+  font-size: 14px;
+  font-weight: 900;
+}
+
+.share button {
+  align-self: flex-end;
+  background-color: white;
+  border: none;
+  display: flex;
+}
+
+.linkName {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
