--- a/src/Css/ExploreNationalities.module.css
+++ b/src/Css/ExploreNationalities.module.css
@@ -10,7 +10,6 @@
 }
 
 .btn {
-  background-color: white;
   border: none;
   border-radius: 4px;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
@@ -19,10 +18,15 @@
 
 .select {
   background-color: white;
+  border: 1px solid #fda509;
   border-radius: 4px;
   font-size: 20px;
   margin-left: 10px;
   margin-top: 10px;
   padding: 8px;
   width: 95%;
+}
+
+.btn:hover {
+  box-shadow: 8px 8px 8px rgba(0, 0, 0, 0.25);
 }
