--- a/src/Css/ExploreDrinksFoods.module.css
+++ b/src/Css/ExploreDrinksFoods.module.css
@@ -6,7 +6,7 @@
   justify-content: space-around;
 }
 
-.btn-explore-DF {
+.btnExploreDF {
   background-color: white;
   border: 2px solid #fda509;
   border-radius: 20px;
