--- a/src/Css/Footer.module.css
+++ b/src/Css/Footer.module.css
@@ -1,5 +1,5 @@
 .footer {
-  background-color: #ffd489;
+  background-color: #f5f5f6;
   bottom: 0;
   display: flex;
   justify-content: space-around;
