--- a/src/Css/Explore.module.css
+++ b/src/Css/Explore.module.css
@@ -10,7 +10,7 @@ body {
   justify-content: space-around;
 }
 
-.btn-explore {
+.btnExplore {
   background-color: white;
   border: 2px solid #fda509;
   border-radius: 20px;
