alterações no box shadow

--- a/src/Css/FavoriteRecipes.module.css
+++ b/src/Css/FavoriteRecipes.module.css
@@ -10,21 +10,25 @@
   border: solid 1px #fda509;
   border-radius: 6px;
   font-size: 20px;
+  margin-bottom: 30px;
+  margin-top: 30px;
   padding: 10px;
   width: 100px;
 }
 
 .sectionFilter {
+  border: white solid 1px;
   border-radius: 8px;
-  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: 4px 4px 1px 1px rgb(0 0 0 / 20%);
   display: flex;
   margin-bottom: 15px;
   margin-left: 10px;
   margin-top: 20px;
-  width: 95%;
+  width: 93%;
 }
 
 .sectionIcons {
+  background-color: white;
   width: 200%;
 }
 
