--- a/src/Css/ExploreNationalities.module.css
+++ b/src/Css/ExploreNationalities.module.css
@@ -10,9 +10,9 @@
 }
 
 .btn {
-  border: none;
-  border-radius: 4px;
-  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  border: white solid 1px;
+  border-radius: 20px;
+  box-shadow: 4px 4px 1px 1px rgb(0 0 0 / 20%);
   flex-basis: 50px;
 }
 
