--- a/src/Css/FavoriteCards.module.css
+++ b/src/Css/FavoriteCards.module.css
@@ -1,7 +1,15 @@
 .cardImg {
+  border-radius: 90px;
   border-bottom-left-radius: 8px;
-  border-top-left-radius: 8px;
+  text-decoration: none;
   width: 100%;
+}
+
+a {
+  color: black;
+  font-size: larger;
+  font-weight: 700;
+  text-decoration: none;
 }
 
 .favButton {
