--- a/src/Css/FoodDetails.css
+++ b/src/Css/FoodDetails.css
@@ -1,6 +1,6 @@
-.recipe-btn {
+/* .recipe-btn {
   background-color: rgb(149, 10, 10);
   border: 1px solid #570a0a;
   bottom: 0;
   position: fixed;
-}
+} */
