--- a/src/Css/ExploreNationalities.module.css
+++ b/src/Css/ExploreNationalities.module.css
@@ -1,12 +1,13 @@
 .section {
-  background-color: white;
+  align-items: center;
+  background-color: whitesmoke;
   display: flex;
   flex-flow: wrap;
   flex-direction: row;
   gap: 15px;
   justify-content: space-evenly;
   margin-bottom: 55px;
-  margin-top: 15px;
+  margin-top: 5px;
 }
 
 .btn {
