--- a/src/Css/Profile.module.css
+++ b/src/Css/Profile.module.css
@@ -1,4 +1,5 @@
 .section {
+  align-items: center;
   background-color: white;
   color: #fda509;
   display: flex;
@@ -11,11 +12,9 @@
   background-color: white;
   border: solid 2px #fda509;
   border-radius: 20px;
+  flex-basis: 50px;
   font-size: x-large;
   font-weight: 700;
-  flex-basis: 50px;
-  font-size: 20px;
-  margin-left: 10px;
   padding: 30px;
   width: 95%;
 }
