--- a/src/Css/SearchBar.module.css
+++ b/src/Css/SearchBar.module.css
@@ -10,6 +10,7 @@
   font-size: 14px;
   height: 60px;
   justify-content: space-around;
+  margin: auto;
   margin-bottom: 8px;
   margin-top: 8px;
   padding-bottom: 5px;
